--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading call">We're decentralizing the FIAT world, we're changing the world that surrounds us all.</h2>
-                <hr class="light">
+                <hr class="divisor">
                 <p class="text-faded call">We're working to decentralize the world that exists beyond the crypto world, because we want to stop depending on centralized financial institutions. </br></br>
 
                     We're creating new decentralized ways to earn money, so that everyone stops depending on centralized jobs, which are dependent and suffocating. We're creating new ways of living from decentralization.</br></br>
