--- a/_includes/community.html
+++ b/_includes/community.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading call">We're decentralizing the FIAT world, we're changing the world that surrounds us all.</h2>
-                <hr class="light">
+                <hr class="divisor">
                 <p class="text-faded call">We know that the true value of a financial ecosystem like ours is the community, that is why we want to distribute the profits obtained with all those who are active participants in our financial ecosystem, through lotteries, obtaining automatic profits through creature NFTs , investments in the financial DApps that we create, and more. </br></br>
 
                     Our entire financial ecosystem has been developed with the community that participates, creates and lives in our ecosystem in mind. The Whitepaper talks in more detail about the reward system that the participants of our financial ecosystem have, but our main objective is to encourage the people who are part of our financial ecosystem to help us decentralize the world around us and to To achieve this, we need our financial ecosystem to grow and reach more people, and this can only be achieved with the help of an active and participatory community.</br></br>
