--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1>we're a new decentralized financial ecosystem made of pure energy</h1>
-            <hr>
+            <hr class="divisor">
             <p>We're uniting the FIAT WORLD with the CRYPTO WORLD with - Hybrid financial DApps - NFT 2.0 - a financial METAVERSE - software and hardware ORACLES - a NEW MULTI-CHAIN BLOCKCHAIN - so everyone can automate their finances and make money easily.</p>
             <a href="./upload/WHITE PAPER ELECTHRONS INGLES V2.pdf" class="btn btn-primary btn-xl page-scroll"> dowload funding proposal</a>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">download whitepaper</a>
