--- a/_includes/headerv.html
+++ b/_includes/headerv.html
@@ -2,7 +2,7 @@
     <div class="headervcontent" id="whitepaper">
         <div class="headerv">
             <h1>we're a new decentralized financial ecosystem made of pure energy</h1>
-            <hr>
+            <hr class="divisor">
             <p>We're uniting the FIAT WORLD with the CRYPTO WORLD with - Hybrid financial DApps - NFT 2.0 - a financial METAVERSE - software and hardware ORACLES - a NEW MULTI-CHAIN BLOCKCHAIN - so everyone can automate their finances and make money easily.</p>
 
             <div class="headerbottoms">
