--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container2">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Our decentralized financial ecosystem</h2>
-                <hr class="primary">
+                <hr class="divisor">
             </div>
     </div>
 
