--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -1,7 +1,7 @@
 <section id="team">
     <div class="contteam">
          <h2>OUR TEAM<h2>
-         
+         <hr class="divisor">
          <div class="peoplegroup">
              <div class="peoplex4">
          
