--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -14,6 +14,7 @@
  <!-- botones -->
  
     <div class="airdropbottoms">
+      <hr class="divisor">
        <div class="howtoparticipate">
          <h2>HOW TO PARTICIPATE</h2>
            <div class="howtobottoms">
@@ -23,7 +24,7 @@
    <a href="#" class="btn btn-default btn-xl wow tada air">Review airdrops.io</a>
            </div>
        </div>
-   <hr class="light">
+   <hr class="divisor">
        <div class="howtoparticipate">
          <h2>HOW TO GET YOUR FREE NFT</h2>
          <div class="howtobottoms">
@@ -32,7 +33,7 @@
    <a href="#" class="btn btn-default btn-xl wow tada air">Check on OPENSEA</a>
            </div>
        </div>
-   <hr class="light">
+       <hr class="divisor">
        <div class="howtoparticipate">
          <h2>HOW TO GET MORE NFTs</h2>
          <div class="howtobottoms">
