--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -18,7 +18,7 @@
        <div class="howtoparticipate">
          <h2>HOW TO PARTICIPATE</h2>
            <div class="howtobottoms">
-   <a href="#" class="btn btn-default btn-xl wow tada air">How to participate</a>
+   <a href="./upload/AIRDROP ELECTHRONS.pdf" class="btn btn-default btn-xl wow tada air">How to participate</a>
    <a href="#" class="btn btn-default btn-xl wow tada air">Check Electhrons</a>
    <a href="#" class="btn btn-default btn-xl wow tada air">Telegram Bot</a>
    <a href="#" class="btn btn-default btn-xl wow tada air">Review airdrops.io</a>
