--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -20,7 +20,7 @@
            <div class="howtobottoms">
    <a href="./upload/AIRDROP ELECTHRONS.pdf" class="btn btn-default btn-xl wow tada air">How to participate</a>
    <a href="#" class="btn btn-default btn-xl wow tada air">Check Electhrons</a>
-   <a href="https://t.me/AirdropElecthronBot" class="btn btn-default btn-xl wow tada air">Telegram Bot</a>
+   <a href="https://t.me/AirdropElecthronBot" class="btn btn-default btn-xl wow tada air" target="_blank">Telegram Bot</a>
    <a href="#" class="btn btn-default btn-xl wow tada air">Review airdrops.io</a>
            </div>
        </div>
