--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -19,7 +19,7 @@
          <h2>HOW TO PARTICIPATE</h2>
            <div class="howtobottoms">
    <a href="./upload/AIRDROP ELECTHRONS.pdf" class="btn btn-default btn-xl wow tada air">How to participate</a>
-   <a href="#" class="btn btn-default btn-xl wow tada air">Check Electhrons</a>
+   <a href="https://docs.google.com/spreadsheets/d/1575GwybZoIpddOfNxrlKJLD9p9F4-QVBgF3qASuLvG4/edit?usp=sharing" class="btn btn-default btn-xl wow tada air" target="_blank>Check Electhrons</a>
    <a href="https://t.me/AirdropElecthronBot" class="btn btn-default btn-xl wow tada air" target="_blank">Telegram Bot</a>
    <a href="#" class="btn btn-default btn-xl wow tada air">Review airdrops.io</a>
            </div>
