--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -1,4 +1,4 @@
-<section id="team">
+<!---<section id="team">
     <div class="contteam">
          <h2>OUR TEAM<h2>
          <hr class="divisor">
@@ -101,4 +101,6 @@
     
     </div>
     <hr class="divisor">
- </section>
+ </section>-->
+
+ <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe96dK2bxzOEJdag8PiFQx0HSunR2ge63VQa25b3Hvurv6Epw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
